@@ -1,7 +1,6 @@
 package com.fst.bazaar.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.transaction.Transactional;
 
@@ -14,30 +13,28 @@ import org.springframework.stereotype.Service;
 import com.fst.bazaar.entity.User;
 import com.fst.bazaar.repo.UserRepo;
 
+import lombok.AllArgsConstructor;
 
 @Service
 @Transactional
+@AllArgsConstructor
 public class UserDetailsImplementation implements UserDetailsService {
 	private final UserRepo userRepo;
 
-	public UserDetailsImplementation(UserRepo userRepo) {
-		this.userRepo = userRepo;
-	}
-
 	@Override
-	public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-		User user = userRepo.findByUsername(username);
+	public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
+		User user = userRepo.findByEmail(email);
 
 		if (user == null) {
-			throw new UsernameNotFoundException(username);
+			throw new UsernameNotFoundException(email);
 		}
 
 		List<SimpleGrantedAuthority> authorities = user.getRoles()
 				.stream()
 				.map(role -> new SimpleGrantedAuthority(role.getName()))
-				.collect(Collectors.toList());
+				.toList();
 
 		return new org.springframework.security.core.userdetails.User(
-				user.getUsername(), user.getPassword(), authorities);
+				user.getEmail(), user.getPassword(), authorities);
 	}
 }
